tutos/Max_cut/logs/pipeline[2025-11-21_16-12-51].log
[2025-11-21 16:12:55] ==============================================================
[2025-11-21 16:12:55] 🚀 Starting Quantum MaxCut Pipeline
[2025-11-21 16:12:55] Mode: simulator | Backend: aer | Shots: 100000
[2025-11-21 16:12:55] Script Path: /Users/Sayu/Desktop/BA_Proj/algos_test_MHD/Variational/scripts
[2025-11-21 16:12:55] Output Dir: /Users/Sayu/Desktop/BA_Proj/tutos/Max_cut/results
[2025-11-21 16:12:55] ==============================================================
[2025-11-21 16:12:55] 🧹 Cleaning previous results...
[2025-11-21 16:12:55] ➡️ Stage: Mapping
[2025-11-21 16:12:55] Running: python /Users/Sayu/Desktop/BA_Proj/algos_test_MHD/Variational/scripts/mapping.py --backend aer --numqbits 3 --out-dir /Users/Sayu/Desktop/BA_Proj/tutos/Max_cut/results --verbose
  File "/Users/Sayu/Desktop/BA_Proj/algos_test_MHD/Variational/scripts/mapping.py", line 76
    adj.label = rf"{gate.label}$^{"†"}$"
                                   ^
SyntaxError: invalid character '†' (U+2020)
